--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,22 @@ services:
     networks:
       - node_nginx-network
 
+
   node:
     container_name: node
-
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh node index.js
     restart: always
     build:
       context: ./node
     depends_on:
       - db
+    tty: true
+    ports:
+      - "3000:3000"
     networks:
       - node_nginx-network
-
+    volumes:
+      - ./node:/usr/src/app
   db:
     build:
       context: ./mysql
