--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,11 +1,18 @@
 FROM node:14 AS builder
 
-WORKDIR /app
+WORKDIR /usr/src/app
+
+RUN apt-get update && apt-get install -y wget
+
+ENV DOCKERIZE_VERSION v0.7.0
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 COPY . .
 
-RUN npm i
+RUN npm install .
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+# CMD [ "node", "index.js" ]
